--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     
         <div class="photocouple">
-        <img class="couple" src="images/para-młoda1.png" alt="">
+        <img class="couple" src="para-młoda1.png" alt="">
         <p>
         Amélie & Guy
         <br>
