--- a/invitation.html
+++ b/invitation.html
@@ -10,7 +10,7 @@
 </head>
 <body >
     <div class="text">
-        <p>Après avoir fait un petit bout
+         <p>Après avoir fait un petit bout
             de chemin ensemble, Amélie et Guy 
             se sont enfin décidés à s’unir pour
             le meilleur et pour le pire. 
@@ -18,7 +18,7 @@
            la joie de ce grand jour le 18 juin 2022. 
            Vous êtes attendus à ... heures à la mairie
            de Fesches-le-châtel suivi des festivités
-           à la chapelle sous chaux .</p>
+           au fort de Meroux (D25, 90400 Meroux) .</p>
     </div>
 
 
