--- a/confirmation.html
+++ b/confirmation.html
@@ -40,7 +40,7 @@
 
 
 <h4 class="couleur">Dress code un vêtement bleu :</h4>
-<img class="imgcouleur" src="images/bleu.png" alt="">
+<img class="imgcouleur" src="bleu.png" alt="">
 
 </div>
 
