--- a/invitation.html
+++ b/invitation.html
@@ -11,15 +11,13 @@
 </head>
 <body >
     <div class="text">
-         <p>Après avoir fait un petit bout
-            de chemin ensemble, Amélie et Guy 
-            se sont enfin décidés à s’unir pour
-            le meilleur et pour le pire. 
+         <p>Après 11 ans d'amour , Amélie et Guy 
+            se sont enfin décidés à s’unir.
            Ils vous invitent à partager ensemble
            la joie de ce grand jour le 18 juin 2022. 
-           Vous êtes attendus à ... heures à la mairie
+           Vous êtes attendus à 16h45 heures à la mairie
            de Fesches-le-châtel suivi des festivités
-           au fort de Meroux (D25, 90400 Meroux) .</p>
+           au fort de Meroux (D25, 90400 Meroux).</p>
     </div>
 
 
