--- a/invitation.html
+++ b/invitation.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Mariage</title>
-    <link rel="shortcut icon" href="love.png" type="image/x-icon">
+    <title>M</title>
     <link rel="stylesheet" href="styles2.css">
     <script src="https://kit.fontawesome.com/6709d2a5b5.js" crossorigin="anonymous"></script>
 </head>
 <body >
-    <div class="text">
-         <p>Après 11 ans d'amour , Amélie et Guy 
+    
+        <p>
+            <br>
+            Après 11 ans d'amour , Amélie et Guy 
             se sont enfin décidés à s’unir.
            Ils vous invitent à partager ensemble
            la joie de ce grand jour le 18 juin 2022. 
