--- a/confirmation.html
+++ b/confirmation.html
@@ -40,7 +40,7 @@
    </form>
 
 
-<h4 class="couleur">Dress code un vêtement bleu :</h4>
+<h4 class="couleurs">Dress code un vêtement bleu :</h4>
 <img class="imgcouleur" src="bleu.png" alt="">
 
 </div>
