--- a/confirmation.html
+++ b/confirmation.html
@@ -9,7 +9,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles3s.css">
+    <link rel="stylesheet" href="styles3.css">
     <script src="https://kit.fontawesome.com/6709d2a5b5.js" crossorigin="anonymous"></script>
 </head>
 <body class="couleur">
