--- a/confirmation.html
+++ b/confirmation.html
@@ -43,7 +43,7 @@
   </div>
 
 <h4 class="couleurs">Dress code un vêtement bleu :</h4>
-<img class="imgcouleur" src="images/bleu.png" alt="">
+<img class="imgcouleur" src="bleu.png" alt="">
 <br><br><br><br>
 
 
