--- a/confirmation.html
+++ b/confirmation.html
@@ -42,7 +42,7 @@
    </form>
   </div>
 
-<h4 class="couleurs">Dress code un vêtement bleu :</h4>
+<h4 class="couleurs">Dress code un vêtement bleu&nbsp;:</h4>
 <img class="imgcouleur" src="bleu.png" alt="">
 <br><br><br><br>
 
