--- a/invitation.html
+++ b/invitation.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M</title>
+   <title>Mariage</title>
+    <link rel="shortcut icon" href="love.png" type="image/x-icon">
     <link rel="stylesheet" href="styles2.css">
     <script src="https://kit.fontawesome.com/6709d2a5b5.js" crossorigin="anonymous"></script>
 </head>
