--- a/invitation.html
+++ b/invitation.html
@@ -13,13 +13,17 @@
     
         <p>
             <br>
-            Après 11 ans d'amour , Amélie et Guy 
+             <!--Après 11 ans d'amour , Amélie et Guy 
             se sont enfin décidés à s’unir.
            Ils vous invitent à partager ensemble
            la joie de ce grand jour le 18 juin 2022. 
            Vous êtes attendus à 16h45 heures à la mairie
            de Fesches-le-châtel suivi des festivités
-           au fort de Meroux (D25, 90400 Meroux).</p>
+           au fort de Meroux (D25, 90400 Meroux).-->
+            
+            Utque proeliorum periti rectores primo catervas densas opponunt et fortes, deinde leves armaturas, post iaculatores ultimasque subsidiales acies, si fors adegerit, iuvaturas, ita praepositis urbanae familiae suspensae digerentibus sollicite, quos insignes faciunt virgae dexteris aptatae velut tessera data castrensi iuxta vehiculi frontem omne textrinum incedit: huic atratum coquinae iungitur ministerium, dein totum promiscue 
+            servitium cum otiosis plebeiis de vicinitate coniunctis: postrema multitudo spadonum a senibus in pueros desinens, obluridi distortaque lineamentorum conpage
+            </p>
     </div>
 
 
